--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       crossorigin="anonymous"
-    /> 
+    />
     <style>
       body {
         background-image: url("{{ url_for('static', filename='bg.png') }}");
@@ -25,7 +25,7 @@
       }
     </style>
     <!-- Block can be overriden by child template -->
-    <title>{% block title %}Home{% endblock %}</title>
+    <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
     <nav
@@ -57,15 +57,42 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="/">Home</a>
+            {% if user.is_authenticated %}
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link" href="/logout">Logout</a>
+            {% else %}
             <a class="nav-link" href="/login">Login</a>
             <a class="nav-link" href="/signup">Sign Up</a>
-            <a class="nav-link" href="/logout">Logout</a>
+            {% endif %}
           </div>
         </div>
       </div>
     </nav>
-    {% block body %} {% endblock %}
+    <!-- flash() notifications -->
+    {% with messages=get_flashed_messages(with_categories=true) %} {% if
+    messages %} {% for category,message in messages %} {% if category == 'error'
+    %}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+      {{ message }}
+      <button
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="alert"
+        aria-label="Close"
+      ></button>
+    </div>
+    {% else %}
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+      {{ message }}
+      <button
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="alert"
+        aria-label="Close"
+      ></button>
+    </div>
+    {% endif %} {% endfor %} {% endif %} {% endwith %} {% block body %} {%
+    endblock %}
     <div
       class="fixed-bottom container-fluid"
       style="background-color: #fcba03; height: 50px"
