--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,3 +1,16 @@
-{% extends "base.html" %}
-{% block title %} Home {% endblock %}
-{% block body %} Home {% endblock %}
+{% extends "base.html" %} {% block title %} Home {% endblock %} {% block body %}
+
+<div class="main-content" style="padding-bottom: 60px">
+  <div class="d-flex flex-nowrap" style="overflow-x: auto">
+    <div class="card m-2 flex-shrink-0">
+      <div
+        class="card-body"
+        style="width: 300px; height: 70vh; overflow-y: auto"
+      >
+        <h5 class="card-title">Study Term</h5>
+      </div>
+    </div>
+  </div>
+</div>
+
+{% endblock %}
