--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block title %} Login {% endblock %} {% block body
 %}
 <div class="row">
-  <div class="col-12 col-md-4 offset-md-4 mt-5">
+  <div class="col-12 col-md-4 offset-md-4 mt-5" style="padding-bottom: 60px">
     <div
       class="card"
       style="background-color: black; border-color: #dfdfdf; border-radius: 5%"
