--- a/website/templates/macros.html
+++ b/website/templates/macros.html
@@ -55,8 +55,8 @@
     />
   </svg>
 </button>
-{% endmacro %} {% macro view_course(title, description, body) %}
-<div class="modal fade" id="course_{{title}}" tabindex="-1" aria-hidden="true">
+{% endmacro %} {% macro view_course(id, title, description, body) %}
+<div class="modal fade" id="course_{{id}}" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header" style="background-color: black">
