--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -51,7 +51,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             {% if user.is_authenticated %}
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link current-home" href="/">Home</a>
+            <a class="nav-link current-search" href="/search">Search</a>
             <a class="nav-link" href="/logout">Logout</a>
             {% else %}
             <a class="nav-link" href="/login">Login</a>
