Completed search bar/results/Cart

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -46,10 +46,8 @@
         <div
           class="modal fade"
           id="rename{{term.id}}"
-          data-bs-backdrop="static"
-          data-bs-keyboard="false"
           tabindex="-1"
-          aria-labelledby="staticBackdropLabel"
+          aria-labelledby="BackdropLabel"
           aria-hidden="true"
         >
           <div class="modal-dialog modal-sm modal-dialog-centered">
