--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -24,6 +24,7 @@
               id="email"
               name="email"
               placeholder="Enter email"
+              autofocus
             />
           </div>
           <div class="mb-3">
