--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -28,6 +28,7 @@
               id="first_name"
               name="first_name"
               placeholder="Enter first name"
+              autofocus
             />
           </div>
           <div class="mb-3">
