--- a/website/templates/macros.html
+++ b/website/templates/macros.html
@@ -2,10 +2,8 @@
 <div
   class="modal fade"
   id="{{ id }}"
-  data-bs-backdrop="static"
-  data-bs-keyboard="false"
   tabindex="-1"
-  aria-labelledby="staticBackdropLabel"
+  aria-labelledby="BackdropLabel"
   aria-hidden="true"
 >
   <div class="modal-dialog modal-sm modal-dialog-centered">
